# gel

./: CMakeLists.txt  README.md
Documentation/: Scene_Format.txt
Source/: CMakeLists.txt  main.cpp
Source/Core/: CMakeLists.txt  game_state.h  init.cpp  init.h  xgl.cpp  xgl.h
Source/Graphics/: .directory  CMakeLists.txt  animation.cpp  animation.h  construct.cpp  construct.h  gfx_manager.cpp  gfx_manager.h  scene.cpp  scene.h  sprite.cpp  sprite.h  text.cpp  text.h
Source/Input/: CMakeLists.txt  input.cpp  input.h
